<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Repas"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="@string/votre_repas"
        android:textAlignment="center"
        android:textColor="#0E0000"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/affichageRepas"
        android:layout_width="299dp"
        android:layout_height="172dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/Photo_repas"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:contentDescription="@string/photo_repas"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_take_pic"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/prendre_photo" />

    <Button
        android:id="@+id/Reco"
        android:layout_width="256dp"
        android:layout_height="69dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reconnaissance" />

    <Button
        android:id="@+id/scan_ble"
        android:layout_width="253dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:text="@string/rechecher_assiette" />

    <TextView
        android:id="@+id/bluetooth_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="resultat bluetooth"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>